--- a/package.json
+++ b/package.json
@@ -5,19 +5,24 @@
   "type": "module",
   "scripts": {
     "dev": "vite --open",
+    "lint": "npx eslint src --ext .ts,.tsx",
+    "lintFix": "npx eslint src --ext .ts,.tsx --fix",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.9.0",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "^1.2.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^3.1.0",
+    "eslint": "^8.36.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   }
